<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="partly_cloud">Partly cloudy&#10;24C-31C</string>
    <string name="shower">Showers &#10; 24C-30C</string>
    <string name="rain">Rain &#10; 22C-23C</string>
    <string name="storm">Thunderstorm &#10; 25C-28C</string>
</resources>